--- a/prototypes/_moderation.html
+++ b/prototypes/_moderation.html
@@ -16,6 +16,7 @@
     
     -->
     <link href="static/css/vendor.css" rel="stylesheet">
+    <link href="static/css/custom.css" rel="stylesheet">
     <link href="static/css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -154,22 +155,117 @@
     <div class="image-background hidden"></div>
 
     <!-- ADD CODES HERE! -->
-    <div class="container">
+    <div class="container contained topper">
         <div class="row">
-            <div class="col-lg-12 well">
+            <div class="col-lg-12">
                 <div class="row">
-                    <div class="col-lg-3 well">
-                        <h3>Moderation</h3>
+                    <div class="col-lg-3 moderation-nav">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li><a href="#">Manage Users</a></li>
+                            <li><a href="#">Moderate Comments</a></li>
+                            <li><a href="#">Moderate Photos</a></li>
+                            <li><a href="#">Review Edits</a></li>
+                        </ul>
                     </div>  
-                    <div class="col-lg-9 well">
-                        <h1>Moderate Comments</h1>
+                    <div class="col-lg-9">
+                        <div class="row">
+                            <h1>Moderate Comments</h1>
+                        </div>
+                        <div class="row">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th><input type="checkbox"><span class="caret"></span></th>
+                                        <th>ID</th>
+                                        <th>Flag</th>
+                                        <th>Comment</th>
+                                        <th>Actions</th>
+                                        <th>Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#">27018</a></td>
+                                        <td><span class="label label-danger">7</span></td>
+                                        <td><a href="#" class="clearfix">Administrator</a>
+                                            <p>Lorem ipsum sit dolor amet consectetur adipiscing elitmus orci elit, fermentum at. <a href="#">more</a></p></td>
+                                        <td><a href="#">Unflag</a>|<a href="#">Hide</a>|<a href="#">Archive</a></td>
+                                        <td>10:53AM</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 
             </div>
         </div>
     </div>
-    <!-- NO MOAR CODES HERE! -->
+    <!-- NO MORE CODES HERE! -->
 </div>
 
 <!-- Footer -->
