Comment Moderation prototypes
Comment Moderation Page

Needs reviewed by Deb

--- a/prototypes/_template.html
+++ b/prototypes/_template.html
@@ -153,6 +153,23 @@
     <!-- Background Image for Interior Pages -->
     <div class="image-background hidden"></div>
 
+    <!-- ADD CODES HERE! -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 well">
+                <div class="row">
+                    <div class="col-lg-3 well">
+                        <h3>Moderation</h3>
+                    </div>  
+                    <div class="col-lg-9 well">
+                        <h1>Moderate Comments</h1>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <!-- NO MOAR CODES HERE! -->
 </div>
 
 <!-- Footer -->
