Add up new scenarios prototype

--- a/prototypes/modeling.html
+++ b/prototypes/modeling.html
@@ -34,7 +34,7 @@
               </li>
               <li><a>Explore Trees</a></li>
               <li class="dropdown active">
-                  <a class="dropdown-toggle" data-toggle="dropdown">Planting Simulations</a>
+                  <a class="dropdown-toggle" data-toggle="dropdown">Plan</a>
                   <ul class="dropdown-menu">
                       <li><a>Explore & Model Trees</a></li>
                       <li><a>Urban Forests Scenarios</a></li>
