--- a/prototypes/scenarios.html
+++ b/prototypes/scenarios.html
@@ -124,15 +124,61 @@
                 <div class="add-step-container">
                     <div class="add-step active">
                         <div class="add-step-content">
-                            <div class="content-header">Individual Trees</div>
-                            <p class="text-muted text-center">
-                                No trees added, yet.<br>
-                                <a>Add a tree</a>
-                            </p>
-                            <div class="content-header">Trees Distributions</div>
-                            <div class="content-row">
-                                
+                            <div class="content-header">Individual Trees <a href="#" class="pull-right">+ Add Tree</a></div>
+                            <div class="content-row hidden">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <label>Species</label>
+                                        <select class="form-control">
+                                            <option>American Maple</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <label>dBh</label>
+                                        <div class="input-group">
+                                            <input class="form-control" type="text" value="2">
+                                            <span class="input-group-addon">in</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2 col-sm-offset-1">
+                                        <a href="#" class="remove"><i class="icon-cancel-circled"></i></a>
+                                        <a href="#" class="add"><i class="icon-plus-circled"></i></a>
+                                    </div>
+                                </div>
                             </div>
+                            <p class="content-empty text-muted text-center"><em>
+                                No trees added, yet.<br>
+                                <a href="#">Add a tree</a>
+                            </em></p>
+                            <div class="content-header">Trees Distributions <a href="#" class="pull-right">+ Add Distribution</a></div>
+                            <div class="content-row hidden">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <label>Species</label>
+                                        <select class="form-control">
+                                            <option>American Maple</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <label>dBh</label>
+                                        <div class="input-group">
+                                            <input class="form-control" type="text" value="2">
+                                            <span class="input-group-addon">in</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <label>Trees</label>
+                                        <input class="form-control" type="text" value="2">
+                                    </div>
+                                    <div class="col-sm-1">
+                                        <a href="#" class="remove"><i class="icon-cancel-circled"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="content-empty text-muted text-center "><em>
+                                No distributions added, yet.<br>
+                                <a href="#">Add a distribution</a>
+                            </em></p>
                         </div>
                         <div class="add-step-footer">
                             <span class="counter"><strong>Step 1</strong> of X</span>
@@ -140,6 +186,9 @@
                                 <li class="previous disabled"><a href="#">&laquo; Back</a></li>
                                 <li class="next"><a href="#">Next &raquo;</a></li>
                             </ul>
+                            <div class="calculate">
+                                <a href="#" class="btn btn-lg btn-primary btn-block disabled">Calculate Scenario</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -147,6 +196,7 @@
         </div>
         <div id="map" class="map">
             <div class="map-popover">
+                <button type="button" class="close"><span aria-hidden="true">&times;</span></button>
                 Place your tree and select its species and diameter on the left. When you're done, you can add more of this tree or add a new tree species.
             </div>
             <div class="options">
