Add in counts on rows

--- a/prototypes/scenarios.html
+++ b/prototypes/scenarios.html
@@ -124,11 +124,11 @@
                 <div class="add-step-container">
                     <div class="add-step active">
                         <div class="add-step-content">
-                            <div class="content-header">Individual Trees <a href="#" class="pull-right">+ Add Tree</a></div>
-                            <div class="content-row hidden">
+                            <div class="content-header">1 Individual Tree <a href="#" class="pull-right">+ Add Tree</a></div>
+                            <div class="content-row">
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <label>Species</label>
+                                        <label>Species <em>(1 tree)</em></label>
                                         <select class="form-control">
                                             <option>American Maple</option>
                                         </select>
@@ -140,18 +140,18 @@
                                             <span class="input-group-addon">in</span>
                                         </div>
                                     </div>
-                                    <div class="col-sm-2 col-sm-offset-1">
+                                    <div class="col-sm-3">
                                         <a href="#" class="remove"><i class="icon-cancel-circled"></i></a>
                                         <a href="#" class="add"><i class="icon-plus-circled"></i></a>
                                     </div>
                                 </div>
                             </div>
-                            <p class="content-empty text-muted text-center"><em>
+                            <p class="content-empty text-muted text-center hidden"><em>
                                 No trees added, yet.<br>
                                 <a href="#">Add a tree</a>
                             </em></p>
-                            <div class="content-header">Trees Distributions <a href="#" class="pull-right">+ Add Distribution</a></div>
-                            <div class="content-row hidden">
+                            <div class="content-header">3 Trees Distributions <a href="#" class="pull-right">+ Add Distribution</a></div>
+                            <div class="content-row">
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <label>Species</label>
@@ -175,7 +175,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="content-empty text-muted text-center "><em>
+                            <p class="content-empty text-muted text-center hidden"><em>
                                 No distributions added, yet.<br>
                                 <a href="#">Add a distribution</a>
                             </em></p>
@@ -187,7 +187,7 @@
                                 <li class="next"><a href="#">Next &raquo;</a></li>
                             </ul>
                             <div class="calculate">
-                                <a href="#" class="btn btn-lg btn-primary btn-block disabled">Calculate Scenario</a>
+                                <a href="#" class="btn btn-lg btn-primary btn-block">Calculate Scenario</a>
                             </div>
                         </div>
                     </div>
