Comment Moderation Icon Changes
Changed the markup to support the fontello icons.  Need to determine
how to update the font file within the css.

--- a/prototypes/_moderation.html
+++ b/prototypes/_moderation.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- 
     
@@ -163,7 +162,7 @@
                     <div class="col-lg-3 moderation-nav">
                         <div class="row">
                             <div class="medallion center-block">
-                                <i class="fa fa-microphone"></i>
+                                <i class="icon-mic"></i>
                             </div>
                         </div>
                         <ul class="nav nav-pills nav-stacked">
@@ -189,7 +188,7 @@
                                     <li><a href="#">Archived</a></li>
                                   </ul>
                                 </div>
-                                <button type="button" class="btn btn-sm" ><i class="fa fa-share-square-o"></i>Export All</button>
+                                <button type="button" class="btn btn-sm" ><i class="icon-export"></i>Export All</button>
                             </div>
                             
                         </div>
@@ -201,7 +200,7 @@
                                             <th class="selector">
                                                 <div class="btn-group">
                                                     <input type="checkbox">
-                                                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-down"></i></button>
+                                                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-down-dir"></i></button>
                                                         <ul class="dropdown-menu" role="menu">
                                                             <li><a href="#">Hide</a></li>
                                                             <li><a href="#">Unhide</a></li>
